--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header class="section header">
         <div class="header-wrapper">
           <nav class="header-nav">
-            <li class="header-nav__logo">Moun<span>tains</span></li>
+            <div class="header-nav__logo">Moun<span>tains</span></div>
             <ul class="header-nav__links">
               <li class="header-nav__links-item">Our story</li>
               <li class="header-nav__links-item">Services</li>
@@ -25,7 +25,6 @@
               <li class="header-nav__links-item">Work</li>
               <li class="header-nav__links-item">Journal</li>
             </ul>
-
             <button class="header-nav__btn btn-outline">Call us</button>
           </nav>
 
@@ -34,62 +33,117 @@
               Travel with us
               <span>to the Mountains</span>
             </h1>
-
             <p class="text-tertiary">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
               excepturi!
             </p>
-
             <button class="btn">Order now</button>
           </div>
         </div>
       </header>
-      <!-- <div class="container"> -->
       <!-- about -->
       <section class="section about">
-        <h3 class="heading-tertiary">
-          About us
-        </h3>
+        <div class="about-wrapper">
+          <div class="about-info">
+            <h3 class="heading-tertiary">
+              About us
+            </h3>
+            <p class="text-tertiary">
+              Aliquam sed posuere urna, et gravida nisl. Praesent interdum nisl
+              libero, pretium egestas purus eleifend vitae. Mauris suscipit vel
+              lectus at luctus.
+            </p>
+            <button class="btn">Read more</button>
+          </div>
 
-        <p class="text-tertiary">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
-          officia nobis nulla amet at quae mollitia fuga exercitationem nihil
-          non.
-        </p>
-
-        <button class="btn">Read more</button>
+          <div class="about-img">
+            <img class="about-img--1" src="./img/about-1.png" alt="about1" />
+            <img class="about-img--2" src="./img/about-2.png" alt="about2" />
+          </div>
+        </div>
       </section>
       <!-- journal -->
       <section class="section journal">
-        <h2 class="heading-tertiary">Our journal</h2>
+        <h2 class="heading-secondary">Our journal</h2>
 
-        <div class="journal-content">6 block here</div>
+        <div class="journal-content">
+          <div class="journal-content__item--1">
+            <img src="./img/journal-1.png" alt="journal-1" />
+          </div>
+
+          <div class="journal-content__item--2">
+            <h5 class="heading-5">Love</h5>
+            <h4 class="heading-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            </h4>
+            <p class="text-tertiary">
+              You know how to make best coffee in the universe? Or, maybe you’re
+              very good in designing gloves? Tell everyone about your experience
+              and skills.
+            </p>
+            <span class="pagination">03</span>
+          </div>
+
+          <div class="journal-content__item--3">
+            <img src="./img/journal-3.png" alt="journal-3" />
+          </div>
+
+          <div class="journal-content__item--4">
+            <h5 class="heading-5">Tree</h5>
+            <h4 class="heading-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            </h4>
+            <p class="text-tertiary">
+              The way to a successful brand is hard, but always very
+              interesting. Share the full story of your project – from the very
+              first day until now.
+            </p>
+            <span class="pagination">02</span>
+          </div>
+
+          <div class="journal-content__item--5">
+            <img src="./img/journal-5.png" alt="journal-5" />
+          </div>
+
+          <div class="journal-content__item--6">
+            <h5 class="heading-5">Water</h5>
+            <h4 class="heading-4">LITTLE PIECES OF OUR PROUDNESS</h4>
+            <p class="text-tertiary">
+              What do you do better than your competitors? What are you proud
+              of? What details and advantages of your product you want people to
+              know about?
+            </p>
+            <span class="pagination">03</span>
+          </div>
+        </div>
       </section>
       <!-- offer -->
       <section class="section offer">
-        <h3 class="heading-tertiary">
-          Do you wanna go?
-        </h3>
+        <div class="offer-wrapper">
+          <h3 class="heading-secondary">
+            Do you wanna go?
+          </h3>
 
-        <p class="text-tertiary">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
-          officia nobis nulla amet at quae mollitia fuga exercitationem nihil
-          non.
-        </p>
+          <p class="text-tertiary">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum
+            officia nobis nulla amet at quae mollitia fuga exercitationem nihil
+            non.
+          </p>
 
-        <form action="#" class="offer-form">
-          <input type="text" class="offer-form__input--1" />
-          <input type="text" class="offer-form__input--2" />
-          <button class="btn">Order now</button>
-        </form>
+          <form action="#" class="offer-form">
+            <input type="text" class="offer-form__input--1" />
+            <input type="text" class="offer-form__input--2" />
+            <button class="btn">Order now</button>
+          </form>
 
-        <div>
-          Your data will not be transferred
+          <div>
+            Your data will not be transferred
+          </div>
         </div>
       </section>
       <!-- scheme -->
       <section class="section scheme">
-        <h2 class="heading-tertiary">How we work</h2>
+        <h2 class="heading-secondary">How we work</h2>
 
         <ul class="scheme-content">
           <li class="scheme-content__item">1 offer</li>
@@ -100,7 +154,7 @@
       </section>
       <!-- travel -->
       <section class="section travel">
-        <h2 class="heading-tertiary">Travel with us</h2>
+        <h2 class="heading-secondary">Travel with us</h2>
 
         <ul class="travel-list">
           <li class="travel-list__item">1 img</li>
@@ -112,7 +166,7 @@
       </section>
       <!-- gallery -->
       <section class="section gallery">
-        <h2 class="heading-tertiary">Gallery</h2>
+        <h2 class="heading-secondary">Gallery</h2>
 
         <div class="gallery-content">6 img here</div>
       </section>
@@ -130,7 +184,7 @@
       <!-- footer -->
       <footer class="section footer">
         <!-- articles -->
-        <h2 class="heading-tertiary">Our clients say</h2>
+        <h2 class="heading-secondary">Our clients say</h2>
 
         <article class="footer-article--1">
           <p class="text-tertiary">
