--- a/index.html
+++ b/index.html
@@ -328,89 +328,139 @@
       <section class="section gallery">
         <h2 class="heading-secondary">Gallery</h2>
 
-        <div class="gallery-content">6 img here</div>
+        <div class="gallery-content">
+          <div class="gallery-content__col--1">
+            <img
+              src="./img/gallery-1.png"
+              alt="gallery-1"
+              class="gallery-content__item--1"
+            /><img
+              src="./img/gallery-4.png"
+              alt="gallery-4"
+              class="gallery-content__item--4"
+            />
+          </div>
+
+          <div class="gallery-content__col--2">
+            <img
+              src="./img/gallery-2.png"
+              alt="gallery-2"
+              class="gallery-content__item--2"
+            />
+            <img
+              src="./img/gallery-5.png"
+              alt="gallery-5"
+              class="gallery-content__item--5"
+            />
+          </div>
+
+          <div class="gallery-content__col--3">
+            <img
+              src="./img/gallery-3.png"
+              alt="gallery-3"
+              class="gallery-content__item--3"
+            />
+
+            <img
+              src="./img/gallery-6.png"
+              alt="gallery-6"
+              class="gallery-content__item--6"
+            />
+          </div>
+        </div>
       </section>
-      <!-- logos -->
-      <section class="section logos">
-        <ul class="logos-list">
-          <li class="logos-list__item">1 logo</li>
-          <li class="logos-list__item">2 logo</li>
-          <li class="logos-list__item">3 logo</li>
-          <li class="logos-list__item">4 logo</li>
-          <li class="logos-list__item">5 logo</li>
-          <li class="logos-list__item">6 logo</li>
-        </ul>
-      </section>
+
       <!-- footer -->
       <footer class="section footer">
-        <!-- articles -->
-        <h2 class="heading-secondary">Our clients say</h2>
+        <div class="footer-wrapper">
+          <!-- articles -->
+          <h2 class="heading-secondary">Our clients say</h2>
 
-        <article class="footer-article--1">
-          <p class="text-tertiary">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi
-            cum animi ea voluptas fugit maiores. Accusamus saepe, minus atque
-            esse nihil, quasi, perspiciatis quod illo molestiae itaque nulla
-            error unde?
-          </p>
+          <div class="footer-article">
+            <article class="footer-article--1">
+              <p class="footer-article__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse
+              </p>
 
-          <figure>
-            <img src="#" alt="author" class="footer-article--2__img" />
-            <figcaption class="footer-article--1__author"></figcaption>
-          </figure>
-        </article>
+              <figure>
+                <img
+                  src="./img/article-photo-1.png"
+                  alt="author"
+                  class="footer-article__img"
+                />
+                <figcaption class="footer-article__author">
+                  Pavliv Yaroslav <span>Web designer</span>
+                </figcaption>
+              </figure>
+            </article>
 
-        <article class="footer-article--2">
-          <p class="text-tertiary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-            explicabo consequatur iusto, vel possimus recusandae vitae eos cum
-            accusantium dolorem.
-          </p>
+            <article class="footer-article--2">
+              <p class="footer-article__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse
+              </p>
 
-          <figure>
-            <img src="#" alt="author" class="footer-article--2__img" />
-            <figcaption class="footer-article--2__author"></figcaption>
-          </figure>
-        </article>
-        <!-- contacts -->
-        <div class="footer-contacts">
-          <h2 class="footer-contact__heading">Contacts</h2>
-
-          <p class="footer-contact__text">
-            Sign up for our newsletter to receive updates
-          </p>
-
-          <form action="#" class="footer-contacts__form">
-            <input
-              type="text"
-              class="footer-contacts__form-input"
-              placeholder="Name"
-            />
-            <input
-              type="text"
-              class="footer-contacts__form-input"
-              placeholder="Phone"
-            />
-            <input
-              type="text"
-              class="footer-contacts__form-input"
-              placeholder="E-mail"
-            />
-            <button class="btn footer-contacts__form-btn">Send</button>
-          </form>
+              <figure>
+                <img
+                  src="./img/article-photo-2.png"
+                  alt="author"
+                  class="footer-article__img"
+                />
+                <figcaption class="footer-article__author">
+                  John Scott <span>The Fringe</span>
+                </figcaption>
+              </figure>
+            </article>
+          </div>
+          <!-- contacts -->
+          <div class="footer-contacts">
+            <h2 class="footer-contacts__heading">Contacts</h2>
+            <p class="footer-contacts__text">
+              Sign up for our newsletter to receive updates
+            </p>
+            <form action="#" class="footer-contacts__form">
+              <input
+                type="text"
+                class="footer-contacts__form-input"
+                placeholder="Name"
+              />
+              <input
+                type="text"
+                class="footer-contacts__form-input"
+                placeholder="Phone"
+              />
+              <input
+                type="text"
+                class="footer-contacts__form-input"
+                placeholder="E-mail"
+              />
+              <button class="btn footer-contacts__form-btn">Send</button>
+            </form>
+          </div>
+          <!-- social -->
+          <ul class="footer-social">
+            <li class="footer-social__item">All rights reserved 2015</li>
+            <li class="footer-social__item">
+              <ul class="footer-social__item-sublist">
+                <li>
+                  <img src="./img/twitter-logo.svg" alt="twitter" />
+                </li>
+                <li>
+                  <img src="./img/facebook-logo.svg" alt="facebook" />
+                </li>
+                <li>
+                  <img src="./img/vk-logo.svg" alt="vk" />
+                </li>
+              </ul>
+            </li>
+            <li class="footer-social__item">1 234 243 123</li>
+          </ul>
         </div>
-        <!-- social -->
-        <ul class="footer-social">
-          <li class="footer-social__item">All rights reserved 2015</li>
-          <li class="footer-social__item">
-            <ul>
-              <li>twitter</li>
-              <li>facebook</li>
-              <li>vk</li>
-            </ul>
-          </li>
-          <li class="footer-social__item">1 234 243 123</li>
-        </ul>
       </footer>
     </div>
   </body>
